// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fyndiq-component-table Cell component should have the right structure 1`] = `
<td
  className="
      cell
      false
      className
    "
>
  Content
</td>
`;

exports[`fyndiq-component-table Row component should have the right structure 1`] = `
<tr
  className="
      row
      false
      false
      false
      rowVerticalCenter
      rowSize-m
      className
    "
>
  Content
</tr>
`;

exports[`fyndiq-component-table Table component should have the right structure 1`] = `
<table
  className="
      table
      className
    "
>
  Content
</table>
`;
